--- a/style.css
+++ b/style.css
@@ -20,119 +20,20 @@
 	background: currentColor;
 }
 
-.hexagon::before {
-	content: '';
-	position: absolute;
-	bottom: 100%;
-	left: 0;
-
-	border: 43px solid transparent;
-	border-bottom: 25px solid currentColor;
-}
-
+.hexagon::before,
 .hexagon::after {
 	content: '';
 	position: absolute;
 	left: 0;
-	top: 100%;
 	border: 43px solid transparent;
+}
+
+.hexagon::before {
+	bottom: 100%;
+	border-bottom: 25px solid currentColor;
+}
+
+.hexagon::after {
+	top: 100%;
 	border-top: 25px solid currentColor;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.rectangle::before{
-	content: "";
-	position: absolute;
-	height: 30px;
-	left:50%;
-	top:0;
-	transform: translateX(-50%);
-	border-left: 50px solid transparent;
-	border-bottom: 30px solid #000;
-}
-
-.rectangle::after{
-	content: "";
-	position: absolute;
-	left:50%;
-	top:0;
-	transform: translateX(-50%);
-	border-right: 50px solid transparent;
-	border-bottom: 30px solid #000;
-}
-
-.rectanglein{
-	width: 80px;
-	height: 50px;
-	position: relative;
-	background: #000;
-}
-
-.rectanglein::before{
-	content: "";
-	position: absolute;
-	height: 30px;
-	left:50%;
-	top:0;
-	transform: translateX(-50%);
-	border-left: 50px solid transparent;
-	border-top: 30px solid #000;
-}
-
-.rectanglein::after{
-	content: "";
-	position: absolute;
-	left:50%;
-	top:0;
-	transform: translateX(-50%);
-	border-right: 50px solid transparent;
-	border-top: 30px solid #000;
 }
